--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,13 @@
     box-sizing: border-box;
 }
 
+body {
+    margin: 0;
+    font-family: sans-serif;
+    background-color: blue;
+}
+
 .gallery img {
-    background-color: green;
     width: 100%;
     max-width: 350px;
     height: 300px;
