--- a/styles.css
+++ b/styles.css
@@ -14,3 +14,12 @@ body {
     height: 300px;
 }
 
+.header {
+    text-align: center;
+    text-transform: uppercase;
+    padding: 32px;
+    background-color: aquamarine;
+    color: beige;
+    border-bottom: 4px solid yellowgreen;
+}
+
