add gallery display flex

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,10 @@ body {
     background-color: blue;
 }
 
+.gallery {
+    display: flex;
+}
+
 .gallery img {
     width: 100%;
     max-width: 350px;
